<resources>
    <string name="app_name">Store Inventory</string>
    <string name="action_insert_dummy_data">Insert dummy data</string>
    <string name="action_display_data">Refresh data</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_product_successful">Product deleted</string>
    <string name="delete_product_failed">Error deleting product</string>

    <!-- Errors -->
    <string name="error_invalid_product_name">Product requires a name</string>
    <string name="error_invalid_product_price">Product requires a valid price</string>
    <string name="error_invalid_product_quantity">Product requires valid quantity</string>
    <string name="error_invalid_supplier_name">Product requires a supplier name</string>
    <string name="error_invalid_supplier_phone">Product requires a supplier phone number</string>
    <string name="error_invalid_update_uri">Update is not supported for %s</string>
    <string name="error_invalid_delete_uri">Deletion is not supported for  %s</string>
    <string name="error_invalid_query_uri">Query is not supported for %s</string>
    <string name="error_invalid_insert_uri">Insertion is not supported for %s</string>

    <!-- Inventory Activity -->
    <string name="empty_view_text">No products available</string>
    <string name="empty_view_subtitle_text">Get started by tapping the plus button.</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="price_format">Price: $%s</string>
    <string name="quantity_format">Quantity: %s</string>
    <string name="buy_button">Buy</string>
    <string name="product_sold">Product is sold out</string>

    <!-- Product Details Activity -->
    <string name="price_title">Price:</string>
    <string name="quantity_title">Quantity:</string>
    <string name="supplier_title">Supplier:</string>
    <string name="supplier_phone_title">Supplier Phone:</string>
    <string name="supplier_call_button">CALL SUPPLIER</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit">Edit</string>
    <string name="pdp_price_format">$%s</string>
    <string name="update_quantity_failed">Error updating product quantity</string>

    <!-- Editor Activity -->
    <string name="product_label">Product</string>
    <string name="product_name_hint">Name</string>
    <string name="product_price_hint">Price</string>
    <string name="product_quantity_hint">Quantity</string>
    <string name="supplier_label">Supplier</string>
    <string name="supplier_name_hint">Name</string>
    <string name="supplier_phone_hint">Phone Number</string>
    <string name="unit_product_price">$</string>
    <string name="action_save">Save</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_delete_product_successful">Product deleted</string>
    <string name="editor_delete_product_failed">Error with deleting product</string>
    <string name="editor_insert_product_successful">Product saved</string>
    <string name="editor_insert_product_failed">Error with saving product</string>
    <string name="editor_update_product_successful">Product updated</string>
    <string name="editor_update_product_failed">Error with updating product</string>
</resources>
